<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mm.com.fairwaytech.Navigation.ui.RegContact.Reg4Activity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center|top"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reg4_title" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cbReg4Html"
                android:text="@string/reg4_html"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cbReg4JavaScript"
                android:text="@string/reg4_js"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg4Php"
                android:text="@string/reg4_php"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg4Ruby"
                android:text="@string/reg4_ruby"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg4CSharp"
                android:text="@string/reg4_csharp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg4Java"
                android:text="@string/reg4_java"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg4BasicDesign"
                android:text="@string/reg4_basic"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg4Drawing"
                android:text="@string/reg4_drawing"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg4Photography"
                android:text="@string/reg4_photography"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg4PrintMaking"
                android:text="@string/reg4_print"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg4Film"
                android:text="@string/reg4_flim"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg4Illustration"
                android:text="@string/reg4_illustration"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etReg4Other"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:inputType="text"
            android:hint="@string/reg2_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnReg4SignUp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btn_round"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


    </LinearLayout>
    </LinearLayout>
</ScrollView>