<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mm.com.fairwaytech.Navigation.ui.RegContact.Reg3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center|top"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reg3_title" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="130dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cbReg3WebDeveloper"
                android:text="@string/reg3_web"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cbReg3SoftwareDeveloper"
                android:text="@string/reg3_software"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg3MobileDeveloper"
                android:text="@string/reg3_mobile"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg3BackEndDeveloper"
                android:text="@string/reg3_backEnd"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg3FrontEndDeveloper"
                android:text="@string/reg3_Front"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg3GraphicDesigner"
                android:text="@string/reg3_graphic"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg3WebDesigner"
                android:text="@string/reg3_webdesigner"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/cbReg3UIUX"
                android:text="@string/reg3_uiux"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:gravity="start|center"
            android:layout_marginStart="32dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnReg3Previous"
                android:text="@string/previous"
                android:textColor="@color/colorPrimary"
                android:background="@android:color/transparent"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="end|center"
            android:layout_marginEnd="32dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/btnReg3Next"
                android:text="@string/next"
                android:textColor="@color/colorPrimary"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>