<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_registered"
            android:icon="@drawable/ic_menu_registered"
            android:title="@string/menu_registered" />
    </group>

    <item android:title="Admin Channel">
        <menu>
            <item
                android:id="@+id/nav_adminPanel"
                android:icon="@drawable/ic_account"
                android:title="@string/menu_adminpanel" />
            <item
                android:id="@+id/nav_registered_course"
                android:icon="@drawable/ic_group"
                android:title="@string/menu_regcourse" />
        </menu>
    </item>

    <item android:title="Setting">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="Logout"/>
        </menu>
    </item>
</menu>
